# claudetokentracker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  purvansh.sh  pyproject.toml  uninstall.sh  usage_tracking.md
.claude/: settings.local.json
assets/: claude-tray.desktop  claude-tray.service
src/claude_tray/: __main__.py  autostart.py  bar.py  cache.py  config.py  indicator.py  logging_setup.py  parser.py  pricing.py  session.py  status.py
src/claude_tray/data/: model-pricing.json
tests/: conftest.py  test_cache.py  test_parser.py  test_pricing.py  test_session.py  test_smoke.py
tests/fixtures/: future_timestamp.jsonl  overflow_5h.jsonl  single_block.jsonl  two_blocks_gap.jsonl
tests/fixtures/multi_session/proj_a/: session1.jsonl
tests/fixtures/multi_session/proj_b/: session1.jsonl
