[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "claude-tray"
version = "0.1.0"
description = "Linux tray indicator for your current Claude Code 5-hour session usage"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Purvansh Parmar" }]
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "anthropic", "tray", "indicator", "appindicator", "gnome", "linux"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment :: Gnome",
  "Topic :: Utilities",
]
dependencies = [
  "tomli >= 2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.5",
  "build>=1.0",
]

[project.scripts]
claude-tray = "claude_tray.__main__:main"

# [project.urls]
# Homepage   = "https://github.com/<owner>/claude-tray"
# Repository = "https://github.com/<owner>/claude-tray"
# Issues     = "https://github.com/<owner>/claude-tray/issues"
# Changelog  = "https://github.com/<owner>/claude-tray/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_tray"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/assets",
  "/install.sh",
  "/uninstall.sh",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
